--- a/bazel/toolchain/BUILD
+++ b/bazel/toolchain/BUILD
@@ -1,8 +1,9 @@
 load(":avr.bzl", "create_avr_toolchain")
 
 package(
-    default_visibility = ["//visibility:public"]
+    default_visibility = ["//visibility:public"],
 )
 
 create_avr_toolchain("atmega16m1", "4000000")
+
 create_avr_toolchain("atmega328p", "16000000")
