Add support for cmocka unit testing

--- a/examples/bazel_test/BUILD
+++ b/examples/bazel_test/BUILD
@@ -4,6 +4,29 @@ package(
     default_visibility = ["//visibility:public"],
 )
 
+cc_library(
+    name = "example_library",
+    srcs = [
+        "library.c",
+    ],
+    hdrs = [
+        "library.h",
+    ],
+    visibility = ["//visibility:public"],
+)
+
+cc_test(
+    name = "utest",
+    srcs = [
+        "test_main.c",
+    ],
+    deps = [
+        ":example_library",
+        "@cmocka",
+    ],
+    visibility = ["//visibility:public"],
+)
+
 cc_firmware(
     name = "bazel_test",
     srcs = ["main.c"],
