--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,8 @@ jobs:
       run: sudo rm -f /var/lib/man-db/auto-update
 
     # Install avr-gcc
-    - name: Install xmllint
-      run: sudo apt install gcc-avr
+    - name: Install gcc-avr
+      run: sudo apt install gcc-avr avr-libc binutils-avr
 
     - name: Build all host
       run: bazelisk build //...
