--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: build
+name: build_and_test
 
 on: [pull_request]
 
@@ -8,6 +8,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    steps:
+    - name: Cache bazel
+      uses: actions/cache@v2
+      env:
+        cache-name: cache-bazel
+      with:
+        path: ~/.cache/bazel
+        key: bazel
 
     # Speed things up a bit
     - name: Disable initramfs update
@@ -25,3 +34,22 @@ jobs:
       run: bazelisk build --config=m16m1-avr //...
     - name: Build all ATMega328p
       run: bazelisk build --config=m328p-avr //...
+
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+
+    - uses: actions/checkout@v2
+
+    # Speed things up a bit
+    - name: Disable initramfs update
+      run: sudo sed -i 's/yes/no/g' /etc/initramfs-tools/update-initramfs.conf
+    - name: Disable man-db update
+      run: sudo rm -f /var/lib/man-db/auto-update
+
+    # Install avr-gcc
+    - name: Install gcc-avr
+      run: sudo apt install gcc-avr avr-libc binutils-avr
+
+    - name: Build all host
+      run: bazelisk test //...
