Buildifier CI only runs when Bazel files change

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,6 +1,11 @@
 name: lint
 
-on: [pull_request]
+on:
+  pull_request:
+    paths: |
+      **/BUILD*
+      WORKSPACE
+      **/*.bzl
 
 jobs:
   buildifier:
