--- a/examples/bazel_test/BUILD
+++ b/examples/bazel_test/BUILD
@@ -1,7 +1,7 @@
 load("//bazel:defs.bzl", "cc_firmware")
 
 package(
-    default_visibility = ["//visibility:public"]
+    default_visibility = ["//visibility:public"],
 )
 
 cc_firmware(
