--- a/libs/can/BUILD
+++ b/libs/can/BUILD
@@ -1,16 +1,41 @@
 cc_library(
+    name = "hdrs",
+    hdrs = [
+        "api.h",
+    ],
+    visibility = ["//visibility:private"],
+)
+
+cc_library(
     name = "can",
     srcs = [
         "can.c",
     ],
     hdrs = [
-        "api.h",
         "mob.h",
     ],
     target_compatible_with = [
         "//bazel/constraints:atmega16m1",
     ],
     visibility = ["//visibility:public"],
+    deps = [
+        ":hdrs",
+    ],
+)
+
+cc_library(
+    name = "mock",
+    srcs = [
+        "mock/can.c",
+    ],
+    target_compatible_with = [
+        "@platforms//os:linux",
+    ],
+    visibility = ["//visibility:public"],
+    deps = [
+        ":hdrs",
+        "@cmocka",
+    ],
 )
 
 cc_library(
@@ -21,6 +46,6 @@ cc_library(
     hdrs = [
         "legacy/can_api.h",
     ],
-    visibility = ["//visibility:public"],
     deprecation = "Please transition to the new library: //libs/can",
+    visibility = ["//visibility:public"],
 )
