Rename things in CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: build_and_test
+name: ci
 
 on: [pull_request]
 
@@ -23,7 +23,6 @@ jobs:
     - name: Disable man-db update
       run: sudo rm -f /var/lib/man-db/auto-update
 
-    # Install avr-gcc
     - name: Install gcc-avr
       run: sudo apt install gcc-avr avr-libc binutils-avr
 
@@ -47,9 +46,8 @@ jobs:
     - name: Disable man-db update
       run: sudo rm -f /var/lib/man-db/auto-update
 
-    # Install avr-gcc
     - name: Install gcc-avr
       run: sudo apt install gcc-avr avr-libc binutils-avr
 
-    - name: Build all host
+    - name: Run all tests
       run: bazelisk test //...
