Add setup go to CI to install buildifier

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,6 +8,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-go@v2
 
     - name: Install buildifier
       run: go get github.com/bazelbuild/buildtools/buildifier
