--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,18 +1,31 @@
 name: lint
 
-on:
-  pull_request:
-    paths:
-    - '**/BUILD*'
-    - 'WORKSPACE'
-    - '**/*.bzl'
+on: [push,pull_request]
 
 jobs:
-  buildifier:
+  check_format:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
 
+    - name: Install buildifier
+      run: | 
+        curl -f -L -o ./buildifier \
+          "https://github.com/bazelbuild/buildtools/releases/download/4.0.1/buildifier" \
+        && chmod +x ./buildifier
+
     - name: Run buildifier
-      run: bazelisk run //:buildifier_check
+      run: ./buildifier --mode=check -r .
+
+    # Speed things up a bit
+    - name: Disable initramfs update
+      run: sudo sed -i 's/yes/no/g' /etc/initramfs-tools/update-initramfs.conf
+    - name: Disable man-db update
+      run: sudo rm -f /var/lib/man-db/auto-update
+
+    - name: Install clang-format
+      run: sudo apt install clang-format
+
+    - name: Run clang-format
+      run: ./scripts/clang-format.sh
