--- a/bazel/toolchain/BUILD
+++ b/bazel/toolchain/BUILD
@@ -1,4 +1,5 @@
 load(":avr.bzl", "create_avr_toolchain")
+load(":linux.bzl", "create_linux_toolchain")
 
 package(
     default_visibility = ["//visibility:public"],
@@ -7,3 +8,5 @@ package(
 create_avr_toolchain("atmega16m1", "4000000")
 
 create_avr_toolchain("atmega328p", "16000000")
+
+create_linux_toolchain()
