--- a/.bazelrc
+++ b/.bazelrc
@@ -8,3 +8,5 @@ build:16m1 --config=m16m1-avr
 
 build:m328p-avr --platforms=//bazel/platforms:atmega328p_avr
 build:328p --config=m328p-avr
+
+build:avr-test-sim --platforms=//bazel/platforms:avr_test_sim
