Add UART library
Also adds example to blinky

--- a/examples/blinky/BUILD
+++ b/examples/blinky/BUILD
@@ -3,5 +3,8 @@ load("//bazel:defs.bzl", "cc_firmware")
 cc_firmware(
     name = "blinky",
     srcs = ["main.c"],
+    deps = [
+        "//libs/uart",
+    ],
     target_compatible_with = ["//bazel/constraints:avr"],
 )
