--- a/.bazelrc
+++ b/.bazelrc
@@ -17,7 +17,7 @@ build:avr-test-sim --platforms=//bazel/platforms:avr_test_sim
 build:linux-x86_64 --platforms=//bazel/platforms:linux-x86_64
 
 # Host docker KiBot
-build:docker-kicad --spawn_strategy=docker --strategy=kibot=docker
+build:docker-kicad --strategy=kibot=docker
 build:docker-kicad --define=EXECUTOR=remote
 build:docker-kicad --experimental_docker_verbose
 build:docker-kicad --experimental_enable_docker_sandbox
