Filter out kicad from //... builds

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,11 +29,11 @@ jobs:
       run: sudo apt install gcc-avr avr-libc binutils-avr
 
     - name: Build all host
-      run: bazelisk build -c opt //...
+      run: bazelisk build -c opt --build_tag_filters="-kicad" //...
     - name: Build all ATMega16m1
-      run: bazelisk build --config=m16m1-avr -c opt //...
+      run: bazelisk build --config=m16m1-avr --build_tag_filters="-kicad" -c opt //...
     - name: Build all ATMega328p
-      run: bazelisk build --config=m328p-avr -c opt //...
+      run: bazelisk build --config=m328p-avr --build_tag_filters="-kicad" -c opt //...
 
   test:
     needs: build
