Remove kicad build in filter from test rule in CI

--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -34,7 +34,7 @@ jobs:
         space_name: ${{ secrets.DO_SPACE_NAME }}
         space_region: ${{ secrets.DO_SPACE_REGION }}
         source: build
-        out_dir: /kicad-artifacts
+        out_dir: kicad-artifacts
         versioning: false
 
 # - name: update_outline
