--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,4 +52,4 @@ jobs:
       run: sudo apt install gcc-avr avr-libc binutils-avr
 
     - name: Run all tests
-      run: bazelisk test //...
+      run: bazelisk test --build_tag_filters="-kicad" //...
