--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -17,14 +17,11 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: build
-      run: ./.github/git-bazel-kicad.sh
+      id: build_kicad
+      run: |
+        ./.github/git-bazel-kicad.sh
       env:
         GITHUB_BASE_SHA: "${{ github.event.pull_request.base.sha }}"
-
-    # - uses: actions/upload-artifact@v2
-    #   with:
-    #     name: kicad-build
-    #     path: build/
 
     - name: upload
       uses: BetaHuhn/do-spaces-action@v2
@@ -36,6 +33,11 @@ jobs:
         source: build
         out_dir: kicad-artifacts
         versioning: false
+
+    - name: comment
+      uses: marocchino/sticky-pull-request-comment@v2
+      with:
+        path: build/comment.md
 
 # - name: update_outline
 #   if ${{ github.event_name == 'push' }}
