Add schematic svg output

--- a/scripts/kibot/build.kibot.yaml
+++ b/scripts/kibot/build.kibot.yaml
@@ -10,7 +10,12 @@ outputs:
   - name: "pcb_svg"
     type: pcbdraw
     options:
-      output: "%f.svg"
+      output: "%f_pcb.svg"
+
+  - name: "sch_svg"
+    type: svg_sch_print
+    options:
+      output: "%f_sch.svg"
 
   - name: step
     type: step
