--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -19,6 +19,7 @@ jobs:
     - name: build
       id: build_kicad
       run: |
+        sudo apt install librsvg2-bin
         ./.github/git-bazel-kicad.sh
       env:
         GITHUB_BASE_SHA: "${{ github.event.pull_request.base.sha }}"
