--- a/vehicle/mkv/hardware/lvbox/bspd/BUILD
+++ b/vehicle/mkv/hardware/lvbox/bspd/BUILD
@@ -2,4 +2,5 @@ load("//bazel:defs.bzl", "kicad_hardware")
 
 kicad_hardware(
     name = "bspd_brakelight",
+    lib_cache = "bspd_brakelight-cache.lib",
 )
