Add BUILD file for acc_interface_internal
Add service section controller BUILD file

Remove BSPD changes

Remove extra stuff

--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -1,10 +1,6 @@
 name: kicad-build
 
 on:
-  # push:
-    # paths:
-    # - '**.sch'
-    # - '**.kicad_pcb'
   pull_request:
     paths:
     - '**.sch'
@@ -40,10 +36,9 @@ jobs:
       with:
         path: build/comment.md
 
-# - name: update_outline
-#   if: ${{ github.event_name == 'push' }} # TODO Comment in
-#   if ${{ github.event_name == 'push' }}
-#   run: ./.github/update_kicad_outline.py
-#   env:
-#     url: 
-#
+    # - name: update_outline
+    #   if: ${{ github.event_name == 'push' }} # TODO
+    #   run: ./.github/update_kicad_outline.py
+    #   env:
+    #     url: 
+    #
