Initial GPIO library commit

--- a/examples/blinky/BUILD
+++ b/examples/blinky/BUILD
@@ -2,7 +2,13 @@ load("//bazel:defs.bzl", "cc_firmware")
 
 cc_firmware(
     name = "blinky",
-    srcs = ["main.c"],
+    srcs = [
+        "main.c",
+        "config.h",
+    ],
+    deps = [
+        "//libs/gpio",
+    ],
     target_compatible_with = ["//bazel/constraints:avr"],
     deps = [
         "//libs/uart",
