--- a/vehicle/mkv/hardware/sensing_controller/BUILD
+++ b/vehicle/mkv/hardware/sensing_controller/BUILD
@@ -1,6 +1,16 @@
 load("//bazel:defs.bzl", "kicad_hardware")
 
 kicad_hardware(
-    name = "sensing_controller", 
-    schematic_files = ["sensing_controller.sch", "connectors.sch", "micros.sch", "power.sch", "suspension_strain_individual.sch", "suspension_strain.sch", "suspension_travel.sch", "tire_temp.sch", "wheel_speed.sch"],
+    name = "sensing_controller",
+    schematic_files = [
+        "sensing_controller.sch",
+        "connectors.sch",
+        "micros.sch",
+        "power.sch",
+        "suspension_strain_individual.sch",
+        "suspension_strain.sch",
+        "suspension_travel.sch",
+        "tire_temp.sch",
+        "wheel_speed.sch",
+    ],
 )
