--- a/projects/hitl/software/hitl/BUILD
+++ b/projects/hitl/software/hitl/BUILD
@@ -1,12 +1,17 @@
 py_library(
-    name="utils",
-    srcs=["utils.py"],
-    visibility=["//visibility:private"]
+    name = "utils",
+    srcs = ["utils.py"],
+    visibility = ["//visibility:private"],
 )
 
 py_library(
-    name="hitl",
-    srcs=["cancontroller.py", "ecu.py", "iocontroller.py", "roadkillharness.py"],
-    deps=[":utils"],
-    visibility=["//visibility:public"]
+    name = "hitl",
+    srcs = [
+        "cancontroller.py",
+        "ecu.py",
+        "iocontroller.py",
+        "roadkillharness.py",
+    ],
+    visibility = ["//visibility:public"],
+    deps = [":utils"],
 )
