--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -36,6 +36,16 @@ jobs:
       with:
         path: build/comment.md
 
+    - name: rescue_check
+      uses: jitterbit/get-changed-files@v1
+      run: |
+        if [${{ steps.files.outputs.added_modified }} | grep -q rescue] then
+          exit 1
+        else
+          exit 0
+        fi
+
+
     # - name: update_outline
     #   if: ${{ github.event_name == 'push' }} # TODO
     #   run: ./.github/update_kicad_outline.py
