--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -20,6 +20,18 @@ jobs:
       env:
         GITHUB_BASE_SHA: "${{ github.event.pull_request.base.sha }}"
 
+    
+    - name: get_changed_files
+      uses: jitterbit/get-changed-files@v1
+
+    - name: rescue_check
+      run: |
+        if [${{ steps.files.outputs.added_modified }} | grep -q rescue] then
+          exit 1
+        else
+          exit 0
+        fi
+
     - name: upload
       uses: BetaHuhn/do-spaces-action@v2
       with:
@@ -35,15 +47,6 @@ jobs:
       uses: marocchino/sticky-pull-request-comment@v2
       with:
         path: build/comment.md
-
-    - name: rescue_check
-      uses: jitterbit/get-changed-files@v1
-    - run: |
-        if [${{ steps.files.outputs.added_modified }} | grep -q rescue] then
-          exit 1
-        else
-          exit 0
-        fi
 
 
     # - name: update_outline
