--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2,9 +2,11 @@ load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
 
 buildifier(
     name = "buildifier",
+    tags = ["manual"],
 )
 
 buildifier(
     name = "buildifier_check",
     mode = "check",
+    tags = ["manual"],
 )
