--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -29,7 +29,7 @@ jobs:
         echo hi
         echo ${{ steps.files.outputs.added_modified }}
 
-        if [${{ steps.files.outputs.added_modified }} | grep -q rescue] then
+        if echo ${{ steps.files.outputs.added_modified }} | grep -q rescue; then
           exit 1
         else
           exit 0
