--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -22,6 +22,7 @@ jobs:
 
     
     - name: get_changed_files
+      id: files
       uses: jitterbit/get-changed-files@v1
 
     - name: rescue_check
