--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -20,6 +20,19 @@ jobs:
       env:
         GITHUB_BASE_SHA: "${{ github.event.pull_request.base.sha }}"
 
+    - name: get_changed_files
+      id: files
+      uses: jitterbit/get-changed-files@v1
+
+    - name: rescue_check
+      run: |
+        if echo ${{ steps.files.outputs.added_modified }} | grep -q rescue; then
+          echo A \"rescue\" library was detected in this pull request! Delete the \"rescue\" library and ensure that all schematic symbols reference the \"formula\" library.
+          exit 1
+        else
+          exit 0
+        fi
+
     - name: upload
       uses: BetaHuhn/do-spaces-action@v2
       with:
