Integrate UART Library (#35)
* Add UART library

Also adds example to blinky

* buildifier

* Implement remaining UART functions

* Add shell example

* Add datasheet comments and add baudrate select ability

* Format

* Fix UART shell and baudrate setting

* clang-format

* Remove interrupt comment from UART

* Remove more comments

* Fix uart init invocations

Co-authored-by: Manu Patil <mpatil99@gmail.com>

--- a/examples/blinky/BUILD
+++ b/examples/blinky/BUILD
@@ -4,4 +4,7 @@ cc_firmware(
     name = "blinky",
     srcs = ["main.c"],
     target_compatible_with = ["//bazel/constraints:avr"],
+    deps = [
+        "//libs/uart",
+    ],
 )
