Initial new AIR code

--- a/vehicle/mkv/software/air_control/BUILD
+++ b/vehicle/mkv/software/air_control/BUILD
@@ -1,3 +1,5 @@
+load("//bazel:defs.bzl", "cc_firmware")
+
 package(
     default_visibility = ["//visibility:public"],
 )
@@ -5,3 +7,15 @@ package(
 exports_files([
     "air.yml",
 ])
+
+cc_firmware(
+    name = "airs",
+    srcs = [
+        "air_new.c",
+        "config.h",
+    ],
+    deps = [
+        "//libs/can",
+        "//libs/state_machine",
+    ],
+)
