Update BSPD code to use new libraries

--- a/vehicle/mkv/software/brakelight_bspd/BUILD
+++ b/vehicle/mkv/software/brakelight_bspd/BUILD
@@ -11,8 +11,9 @@ cc_firmware(
     ],
     visibility = ["//visibility:public"],
     deps = [
+        "//libs/adc",
         "//libs/can",
         "//libs/gpio",
-        "//libs/adc",
+        "//libs/timer",
     ],
 )
