Create new AIR control code files

--- a/vehicle/mkv/software/air_control/BUILD
+++ b/vehicle/mkv/software/air_control/BUILD
@@ -11,11 +11,13 @@ exports_files([
 cc_firmware(
     name = "airs",
     srcs = [
-        "air_new.c",
+        "air.c",
         "config.h",
     ],
     deps = [
-        "//libs/can",
         "//libs/state_machine",
+        "//libs/can",
+        "//libs/gpio",
+        "//libs/timer",
     ],
 )
