--- a/vehicle/mkv/hardware/service_section_controller/BUILD
+++ b/vehicle/mkv/hardware/service_section_controller/BUILD
@@ -1,7 +1,7 @@
 load("//bazel:defs.bzl", "kicad_hardware")
 
 kicad_hardware(
-	name = "service_section_controller",
-	lib_cache = "service_section_controller-cache.lib",
+    name = "service_section_controller",
+    schematic_files = ["service_section_controller.sch"] + glob(["*.sch"], ["service_section_controller.sch"]),
 )
 
