Update BUILD files and remove PDFs

--- a/vehicle/mkv/hardware/lvbox/cooling/BUILD
+++ b/vehicle/mkv/hardware/lvbox/cooling/BUILD
@@ -2,4 +2,5 @@ load("//bazel:defs.bzl", "kicad_hardware")
 
 kicad_hardware(
     name = "cooling_sense",
+    schematic_files = ["cooling_sense.sch"] + glob(["*.sch"], ["cooling_sense.sch"]),
 )
