updated mini_yaml field naming

--- a/projects/can_api/files/mini_yamls/air_ctrl.yaml
+++ b/projects/can_api/files/mini_yamls/air_ctrl.yaml
@@ -2,8 +2,7 @@ chip: AIR
 receives: BMS_core
 MessagesTX:
   AIR_ctrl:
-    RX: THR, DASH
-    frequency: 100
+    cycle_time: 100
     priority: MED
     data_bytes: 8.0
     signals:
