Refactor state machine into 1ms task

--- a/vehicle/mkv/software/air_control/BUILD
+++ b/vehicle/mkv/software/air_control/BUILD
@@ -9,7 +9,7 @@ exports_files([
 ])
 
 cc_firmware(
-    name = "airs",
+    name = "air_control",
     srcs = [
         "air.c",
         "config.h",
