Add default values for can and io controller initialization, use config file

--- a/projects/hitl/software/artifacts/config.ini
+++ b/projects/hitl/software/artifacts/config.ini
@@ -12,5 +12,5 @@ can_channel=vcan0
 
 [PATHS]
 pin_config=pin_info.csv
-dbc_path=dash.dbc
+dbc_path=veh.dbc
 can_log_path=None  # TODO not supported yet
