Add cantools DBC generator bazel integration

--- a/libs/can/BUILD
+++ b/libs/can/BUILD
@@ -77,5 +77,6 @@ cc_firmware(
     visibility = ["//visibility:public"],
     deps = [
         "//libs/can",
+        "//vehicle/mkv:mkv_can_api",
     ],
 )
