--- a/projects/can_api/BUILD
+++ b/projects/can_api/BUILD
@@ -12,3 +12,20 @@ py_binary(
     ],
     visibility = ["//visibility:public"],
 )
+
+py_binary(
+    name = "c_generator",
+    main = "c_generator.py",
+    srcs = [
+        "c_generator.py",
+        "yaml_handler.py",
+    ],
+    data = [
+        "//projects/can_api/files/c_templates:c_file.j2",
+        "//projects/can_api/files/c_templates:h_file.j2",
+    ],
+    deps = [
+        "@cantools_//:cantools_lib",
+    ],
+    visibility = ["//visibility:public"],
+)
