Move BSPD to use new CAN API

--- a/vehicle/mkv/BUILD
+++ b/vehicle/mkv/BUILD
@@ -5,6 +5,7 @@ dbc_gen(
     name = "mkv.dbc",
     srcs = [
         "//vehicle/mkv/software/air_control:air.yml",
+        "//vehicle/mkv/software/brakelight_bspd:bspd.yml",
         "//vehicle/mkv/software/motor_controller:motor_controller.dbc",
     ],
 )
