--- a/vehicle/mkv/hardware/lvbox/cooling/BUILD
+++ b/vehicle/mkv/hardware/lvbox/cooling/BUILD
@@ -2,5 +2,8 @@ load("//bazel:defs.bzl", "kicad_hardware")
 
 kicad_hardware(
     name = "cooling_sense",
-    schematic_files = ["cooling_sense.sch"] + glob(["*.sch"], ["cooling_sense.sch"]),
+    schematic_files = ["cooling_sense.sch"] + glob(
+        ["*.sch"],
+        ["cooling_sense.sch"],
+    ),
 )
