--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -23,6 +23,8 @@ jobs:
     - name: get_changed_files
       id: files
       uses: jitterbit/get-changed-files@v1
+      with:
+        format: 'csv'
 
     - name: rescue_check
       run: |
