--- a/vehicle/mkv/software/air_control/BUILD
+++ b/vehicle/mkv/software/air_control/BUILD
@@ -1,3 +1,4 @@
+load("//bazel/tools:defs.bzl", "can_api_files")
 load("//bazel:defs.bzl", "cc_firmware")
 
 package(
@@ -12,15 +13,41 @@ cc_firmware(
     name = "air_control",
     srcs = [
         "air.c",
-        "config.h",
+        "air_config.h",
     ],
     deps = [
-        "//libs/can",
+        ":can_api",
+        ":bsp",
         "//libs/gpio",
         "//libs/timer",
     ],
     target_compatible_with = [
         "//bazel/constraints:atmega16m1",
     ],
-    visibility = ["//visibility:public"],
+)
+
+cc_library(
+    name = "bsp",
+    srcs = [
+        "bsp/bsp.c",
+        "bsp/timer.c",
+    ],
+    hdrs = [
+        "bsp/bsp.h",
+        "bsp/timer.h",
+    ],
+    deps = [
+        "//libs/timer",
+        ":can_api",
+    ],
+    target_compatible_with = [
+        "//bazel/constraints:atmega16m1",
+    ],
+    visibility = ["//visibility:private"],
+)
+
+can_api_files(
+    name = "can_api",
+    dbc = "//vehicle/mkv:mkv.dbc",
+    yaml = ":air.yml",
 )
