--- a/vehicle/mkv/software/bms/BUILD
+++ b/vehicle/mkv/software/bms/BUILD
@@ -1,6 +1,10 @@
 load("//bazel/tools:defs.bzl", "can_api_files")
 load("//bazel:defs.bzl", "cc_firmware")
 
+package(
+    default_visibility = ["//visibility:public"],
+)
+
 exports_files([
     "bms.yml",
 ])
