--- a/vehicle/mkv/software/bms/ltc6811/BUILD
+++ b/vehicle/mkv/software/bms/ltc6811/BUILD
@@ -20,9 +20,26 @@ cc_library(
     srcs = ["ltc681x.cpp"],
     hdrs = [
         "ltc681x.h",
-        "spi_translator.h"
     ],
     deps = [
+        ":bms_hardware",
+    ],
+    target_compatible_with = [
+        "//bazel/constraints:avr",
+    ],
+    visibility = ["//visibility:private"],
+)
+
+cc_library(
+    name = "bms_hardware",
+    srcs = [
+        "bms_hardware.cpp",
+    ],
+    hdrs = [
+        "bms_hardware.h",
+    ],
+    deps = [
+        "//libs/gpio",
         "//libs/spi",
     ],
     target_compatible_with = [
